--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha",
+    "test:ci": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,8 @@
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^8.0.1"
   }
 }
