--- a/.github/workflows/npm-push.yml
+++ b/.github/workflows/npm-push.yml
@@ -5,8 +5,7 @@ name: Node.js Package
 
 on:
   push:
-    branches: 
-      - dev
+    branches: [dev]
 
 jobs:
   build:
@@ -16,4 +15,5 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: npm install
       - run: npm test
