--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,10 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://help.github.com/actions/language-and-framework-guides/publishing-nodejs-packages
 
-name: Node.js Package
+name: deply docker
 
 on:
-  pull_request: 
+  push: 
     branches: 
       - master
 
@@ -13,12 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
       - run: docker build -t madhavpalshikar/apptest .
       - run: docker login -u $DOCKER_UN -p $DOCKER_PW
         env:
-          DOCKER_UN: ${{ secret.DOCKER_UN }}
-          DOCKER_PW: ${{ secret.DOCKER_PW }}
+          DOCKER_UN: ${{ secrets.DOCKER_UN }}
+          DOCKER_PW: ${{ secrets.DOCKER_PW }}
       - run: docker push madhavpalshikar/apptest 
