--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           token: ${{ secrets.DOCTL_TOKEN }}
       - run: doctl kubernetes cluster kubeconfig save apptest
-      - run: kubectl rollout restart deployment app-depl
+      - run: kubectl apply -f infra/k8s
