ingress domain added

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: 139.59.50.16
+    - host: www.madhavpalshikar.xyz
       http:
         paths:
           - path: /?(.*)
